<resources>
    <string name="app_name">Speedmeter</string>

    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="satellite">Satellites</string>

    <string name="waiting_for_fix">Waiting for GPS fix …</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="please_enable_gps">In order to use this app you need the GPS to be enabled.</string>

    <string name="running">Route in process…</string>
    <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>

    <string name="settings">Settings</string>
    <string name="app_info">About this app</string>
    <string name="pref_auto_average">Automatically detect stop time.</string>
    <string name="pref_auto_average_summary">The time spent at stop will not count in the average speed.</string>
    <string name="pref_miles_per_hour">Use miles per hour</string>
    <string name="pref_miles_per_hour_summary">Display the speed in mi/h instead of km/h</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">GitHub</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Speedmeter Version</string>

    <string name="noti_id" translatable="false">Speedmeterisanid</string>
    <string name="github" translatable="false">https://github.com/flyingrub/SpeedMeter</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="doante_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>
    <string name="start_speaking">Start Speaking</string>
    <string name="stop_speaking">Stop Speaking</string>
    <string name="riding_aid_active">Riding Aid Active</string>
    <string name="mirror_checking_aid_running">Mirror-checking aid running</string>
    <string name="enable_speed_speaking">Enable speed speaking in the background</string>
    <string name="utter_speed_difference">Utter Speed After Speed X Increase/Decrease</string>
    <string name="speed_speaking_time_interval_summary">Use 0 to disable this</string>
    <string name="speed_speaking_time_interval_title">Utter speed every X seconds</string>
    <string name="speed_talking_active">Speed Talking active</string>
    <string name="speed_will_be_uttered_every">Speed will be uttered every %1$d km/h or %2$d seconds</string>
    <string name="speed_speaking_not_enabled_please_enable_it">Speed speaking is not enabled! Please enable it</string>
</resources>
