<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings">

    <SwitchPreference
        android:key="auto_average"
        android:title="@string/pref_auto_average"
        android:summary="@string/pref_auto_average_summary"
        />

    <SwitchPreference
        android:key="miles_per_hour"
        android:title="@string/pref_miles_per_hour"
        android:summary="@string/pref_miles_per_hour_summary"
    />

        <SwitchPreference
            android:key="enable_speed_speaking"
            android:title="@string/enable_speed_speaking"/>

        <EditTextPreference
            android:key="speed_speaking_speed_interval"
            android:defaultValue="7"
            android:numeric="integer"
            android:maxLength="3"
            android:title="@string/utter_speed_difference"/>

        <EditTextPreference
            android:key="speed_speaking_time_interval"
            android:defaultValue="10"
            android:numeric="integer"
            android:maxLength="3"
            android:title="@string/speed_speaking_time_interval_title"
            android:summary="@string/speed_speaking_time_interval_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_info">

        <Preference
            android:key="license"
            android:title="@string/license"
            android:summary="@string/license_type">
        </Preference>

        <Preference
            android:key="github"
            android:title="@string/source_code"
            android:summary="@string/source_code_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github"
                />

        </Preference>

        <Preference
            android:key="donate"
            android:title="@string/donate"
            android:summary="@string/donate_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/doante_url"
                />

        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version"
            android:summary="">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>